--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 2.2.108
-    - name: Go to the src folder
-      run: cd src
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run:
+        cd src
+        dotnet build --configuration Release
